Keep trial lead idempotency compatible with Java 17